[package]
name = "quex"
version = "0.1.0"
edition = "2021"

[dependencies]
# For HTML templating
askama = "0.12.1"
askama_axum = "0.4.0"
# Web server framework
axum = "0.7.5"
# Useful utilities like cookies
axum-extra = { version = "0.9.3", features = ["cookie"] }
# Binary encoding/decoding
base64 = "0.22.1"
# For environment variables
dotenvy = "0.15.7"
# Database and Turso
libsql = "0.3.5"
# Better ids than UUIDs
nanoid = "0.4.0"
# HTTP requests for API calls like sending emails through a service
reqwest = { version = "0.12.4", features = ["json"] }
# Ser[ialization]/de[serialization]
serde = "1.0.201"
# For time things like expiration dates
time = "0.3.36"
# Async runtime
tokio = { version = "1.37.0", features = ["full"] }
# Tokio utilities like file system access
tower-http = { version = "0.5.2", features = ["fs"] }
# For logging and telemetry to get better insights into what is going on inisde the app
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# Useful macros to make implementing errors easier
thiserror = "1.0.61"
# For Date and Time formatting based on locale information
icu = "1.5.0"
